--- a/apps/playground/package.json
+++ b/apps/playground/package.json
@@ -16,5 +16,17 @@
     "svelte-check": "^4.3.1",
     "typescript": "~5.8.3",
     "vite": "^7.1.7"
+  },
+  "dependencies": {
+    "@codemirror/commands": "^6.10.2",
+    "@codemirror/lang-python": "^6.2.1",
+    "@codemirror/language": "^6.12.1",
+    "@codemirror/state": "^6.5.4",
+    "@codemirror/view": "^6.39.13",
+    "@kodme/core": "workspace:^",
+    "@lezer/highlight": "^1.2.3",
+    "@types/prismjs": "^1.26.6",
+    "prismjs": "^1.30.0",
+    "svelte-codemirror-editor": "^2.1.0"
   }
 }
